--- a/index.html
+++ b/index.html
@@ -457,6 +457,64 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <form class="modal-form">
+          <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
+          <label class="modal-form-field">
+            Ім'я
+            <span class="form-field-wrapper">
+              <input
+                type="text"
+                name="user_name"
+                pattern="[a-zA-Zа-яА-яІіЇї]+"
+                minlenght="3"
+                required
+                class="modal-form-input"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modal-person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            Телефон
+            <span class="form-field-wrapper">
+              <input type="tel" name="user_phone" required class="modal-form-input" />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modal-phone"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            Пошта
+            <span class="form-field-wrapper">
+              <input type="email" name="user_email" required class="modal-form-input" />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modal-mail"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            Коментар
+            <textarea
+              name="user_comment"
+              placeholder="Введіть текст"
+              class="modal-form-textarea"
+            ></textarea>
+          </label>
+          <label class="modal-form-check-field">
+            <input type="checkbox" name="user_policy" class="modal-form-check visually-hidden" />
+            <svg class="modal-form-check-own">
+              <use
+                href="./images/icons.svg#icon-modal-checkbox"
+                class="modal-form-check-icon"
+              ></use>
+            </svg>
+            Погоджуюся з розсилкою та приймаю &nbsp;<a class="form-policy-link" href="#"
+              >Умови договору</a
+            >
+          </label>
+          <button type="submit" class="modal-form-submit">Відправити</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
