--- a/portfolio.html
+++ b/portfolio.html
@@ -307,6 +307,26 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <p class="footer-form-text">Підпишіться на розсилку</p>
+          <div class="footer-form-container">
+            <label class="footer-form-field">
+              <input
+                name="email"
+                type="email"
+                placeholder="E mail"
+                required
+                class="footer-form-input"
+              />
+            </label>
+            <button type="submit" class="footer-form-button">
+              Підписатися
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
