--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link 
-      rel="stylesheet" 
+    <link
+      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -25,7 +25,7 @@
           >
           <ul class="menu list">
             <li class="menu-item">
-              <a href="./index.html" class="menu-link link ">Студія</a>
+              <a href="./index.html" class="menu-link link">Студія</a>
             </li>
             <li class="menu-item">
               <a href="./portfolio.html" class="menu-link link current">Портфоліо</a>
@@ -58,192 +58,229 @@
     <main>
       <section class="page-portfolio-projects">
         <div class="container">
-          <h1 class="buttons visually-hidden">Кнопки</h2>
+          <h1 class="buttons visually-hidden">Кнопки</h1>
           <ul class="buttons-list list">
             <li class="buttons-list-item">
-            <button class="portfolio-buttons buttoncursor portfolio-buttons-all" type="button">Усі</button>
+              <button class="portfolio-buttons buttoncursor portfolio-buttons-all" type="button">
+                Усі
+              </button>
             </li>
             <li class="buttons-list-item">
-            <button class="portfolio-buttons buttoncursor" type="button">Веб-сайти</button>
+              <button class="portfolio-buttons buttoncursor" type="button">Веб-сайти</button>
             </li>
             <li class="buttons-list-item">
-            <button class="portfolio-buttons buttoncursor" type="button">Додатки</button>
+              <button class="portfolio-buttons buttoncursor" type="button">Додатки</button>
             </li>
             <li class="buttons-list-item">
-            <button class="portfolio-buttons buttoncursor" type="button">Дизайн</button>
+              <button class="portfolio-buttons buttoncursor" type="button">Дизайн</button>
             </li>
             <li class="buttons-list-item">
-            <button class="portfolio-buttons buttoncursor" type="button">Маркетинг</button>
+              <button class="portfolio-buttons buttoncursor" type="button">Маркетинг</button>
             </li>
           </ul>
         </div>
         <div class="container">
           <ul class="portfolio-projects list">
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-1.jpg"
-              alt="Notebook"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-              <div class="portfolio-projects-container">
-                <h2 class="portfolio-projects-name">Технокряк</h3>
-                <p class="portfolio-projects-description">Веб-сайт</p>
-              </div>
-            </a>
-            
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-2.jpg"
-              alt="Poster"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-              <div class="portfolio-projects-container">
-                <h2 class="portfolio-projects-name">Постер New Orlean vs Golden Star</h3>
-                <p class="portfolio-projects-description">Дизайн</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-3.jpg"
-              alt="RestaurantLogo"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-            <div class="portfolio-projects-container">
-              <h2 class="portfolio-projects-name">Ресторан Seafood</h3>
-              <p class="portfolio-projects-description">Додаток</p>
-            </div>
-            </a>
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-4.jpg"
-              alt="Headphones"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-            <div class="portfolio-projects-container">
-              <h2 class="portfolio-projects-name">Проєкт Prime</h3>
-              <p class="portfolio-projects-description">Маркетинг</p>
-            </div>
-            </a>
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-5.jpg"
-              alt="Boxes"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-            <div class="portfolio-projects-container">
-              <h2 class="portfolio-projects-name">Проєкт Boxes</h3>
-              <p class="portfolio-projects-description">Додаток</p>
-            </div>
-            </a>
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-6.jpg"
-              alt="Monitor"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-            <div class="portfolio-projects-container">
-              <h2 class="portfolio-projects-name">Inspiration has no Borders</h3>
-              <p class="portfolio-projects-description">Веб-сайт</p>
-            </div>
-            </a>
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-7.jpg"
-              alt="Book"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-            <div class="portfolio-projects-container">
-              <h2 class="portfolio-projects-name">Видання Limited Edition</h3>
-              <p class="portfolio-projects-description">Дизайн</p>
-            </div>
-            </a>
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-8.jpg"
-              alt="LabelTag"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-            <div class="portfolio-projects-container">
-              <h2 class="portfolio-projects-name">Проєкт LAB</h3>
-              <p class="portfolio-projects-description">Маркетинг</p>
-            </div>
-            </a>
-          </li>
-          <li class="portfolio-projects-item">
-            <a href="#" class="portfolio-projects-link link">
-              <div class="portfolio-image-wrapper">
-                <img
-              src="./images/portfolio-9.jpg"
-              alt="NotebookWork"
-              width="370"
-              height="294"
-              class="portfolio-projects-photo"
-                />
-              <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-            <div class="portfolio-projects-container">
-              <h2 class="portfolio-projects-name">Growing Business</h3>
-              <p class="portfolio-projects-description">Додаток</p>
-            </div>
-            </a>
-          </li>
-        </ul>
-        </div> 
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-1.jpg"
+                    alt="Notebook"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Технокряк</h2>
+                  <p class="portfolio-projects-description">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-2.jpg"
+                    alt="Poster"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio-projects-description">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-3.jpg"
+                    alt="RestaurantLogo"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Ресторан Seafood</h2>
+                  <p class="portfolio-projects-description">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-4.jpg"
+                    alt="Headphones"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Проєкт Prime</h2>
+                  <p class="portfolio-projects-description">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-5.jpg"
+                    alt="Boxes"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Проєкт Boxes</h2>
+                  <p class="portfolio-projects-description">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-6.jpg"
+                    alt="Monitor"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Inspiration has no Borders</h2>
+                  <p class="portfolio-projects-description">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-7.jpg"
+                    alt="Book"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Видання Limited Edition</h2>
+                  <p class="portfolio-projects-description">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-8.jpg"
+                    alt="LabelTag"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Проєкт LAB</h2>
+                  <p class="portfolio-projects-description">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-projects-item">
+              <a href="#" class="portfolio-projects-link link">
+                <div class="portfolio-image-wrapper">
+                  <img
+                    src="./images/portfolio-9.jpg"
+                    alt="NotebookWork"
+                    width="370"
+                    height="294"
+                    class="portfolio-projects-photo"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <div class="portfolio-projects-container">
+                  <h2 class="portfolio-projects-name">Growing Business</h2>
+                  <p class="portfolio-projects-description">Додаток</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
